--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -78,6 +78,7 @@ microservice-chart:
       KAFKA_BINDER_BROKER_ENDPOINT_RULE_ENGINE: kafka_broker
       KAFKA_BINDER_BROKER_ENDPOINT_REWARD: kafka_broker
       KAFKA_BINDER_BROKER_ENDPOINT_ERRORS: kafka_broker
+      KAFKA_BINDER_BROKER_ENDPOINT_COMMANDS: kafka_broker
       KAFKA_TOPIC_RULE_ENGINE: idpay_transaction_topic
       KAFKA_TOPIC_REWARD: idpay_reward_notification_response_topic
       KAFKA_TOPIC_ERRORS: idpay_error_topic
@@ -94,6 +95,7 @@ microservice-chart:
     KAFKA_REWARD_SASL_JAAS_CONFIG: evh-idpay-reward-notification-response-idpay-reward-notification-response-consumer-jaas-config-idpay-01
     KAFKA_NOTIFICATION_SASL_JAAS_CONFIG: evh-idpay-notification-request-idpay-notification-request-producer-jaas-config-idpay-00
     KAFKA_ERRORS_SASL_JAAS_CONFIG: evh-idpay-errors-idpay-errors-producer-jaas-config-idpay-01
+    KAFKA_COMMANDS_SASL_JAAS_CONFIG: evh-idpay-commands-idpay-commands-consumer-jaas-config-idpay-01
 
   # nodeSelector: {}
 
