--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+mongo:
+  request-rate-too-large:
+    max-retry: ${MONGO_REQUEST_RATE_TOO_LARGE_MAX_RETRY:5}
+    max-millis-elapsed: ${MONGO_REQUEST_RATE_TOO_LARGE_MAX_MILLIS_ELAPSED:0}
+
 logging:
   level:
     it:
