--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -342,3 +342,5 @@ app:
   initiative:
     logo:
       url: ${INITIATIVE_LOGO_URL}
+  iban:
+    formalControl: ${IS_IBAN_FORMAL_CONTROL_ACTIVE:false}
