--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -60,6 +60,8 @@ microservice-chart:
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
     INITIATIVE_LOGO_URL: "https://idpaydinitiativestorage.blob.core.windows.net/logo/"
     IS_IBAN_FORMAL_CONTROL_ACTIVE: "false"
+    DELETE_PAGINATION_SIZE: "100"
+    DELETE_DELAY_TIME: "1000"
 
   envConfigMapExternals:
     idpay-common:
