--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -343,7 +343,7 @@ app:
     logo:
       url: ${INITIATIVE_LOGO_URL}
   delete:
-    paginationSize: ${DELETE_PAGINATION_SIZE}
-    delayTime: ${DELETE_DELAY_TIME}
+    paginationSize: ${DELETE_PAGINATION_SIZE:100}
+    delayTime: ${DELETE_DELAY_TIME:1000}
   iban:
     formalControl: ${IS_IBAN_FORMAL_CONTROL_ACTIVE:false}
